# OOP_Laba_3

./: CMakeLists.txt  README.md  main.cpp
include/: array.hpp  figure.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
src/: rectangle.cpp  square.cpp  trapezoid.cpp
tests/: tests.cpp
